--- a/html/mac.html
+++ b/html/mac.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <title>Терминал MaOS</title>
+      <title>Терминал MaсOS </title>
       <link rel="stylesheet" type="text/css" href="../css/style.css">
       <link rel="stylesheet" type="text/css" href="../css/font-awesome.css">
       <link rel="shortcut icon" href="../img/fav.ico" type="image/x-icon">
@@ -13,12 +13,21 @@
       <!--Card-->
       <div class="card animated fadeIn">
          <p class="subtitle">Терминал MacOS</p>
+         <h3 id="rt-0"> Управление файлами и папками</h3>
          <ul>
             <li>ls - расшифровывается как "List files in the directory", что переводится как "перечислить все файлы в папке" или "вывести на экран список файлов в папке".</li>
             <li>cd - расшифровывается как "Change directory", что переводится как "сменить папку" или "перейти в другую папку".</li>
-            <li>pwd - расшифровывается как "Present working directory", что переводится как "текущая рабочая директория". То есть команда pwd показывает, в какой сейчас папке мы находимся. </li>
+            <li>pwd - расшифровывается как "Print working directory", что переводится как "текущая рабочая директория". То есть команда pwd показывает, в какой сейчас папке мы находимся. </li>
             <li>mv - расшифровывается как "Make directory", что переводится как "создать папку".</li>
-            <li>mkdir - расфшифровывается как"Move", что переводится как "переместить", "передвинуть". С помощью нее можно переместить, переименовать или удалить файл/</li>
+            <li>mkdir - расшифровывается как "Move", что переводится как "переместить", "передвинуть". С помощью нее можно переместить, переименовать или удалить файл/</li>
+         </ul>
+         <h3 id="rt-3">Системная информация</h3>
+         <ul>
+            <li>whoami — показывает имя пользователя</li>
+            <li>sudo purge — принудительно очищает оперативную память (потребуется ввод пароля)</li>
+            <li>sudo shutdown ‑h now — отключает компьютер (потребуется ввод пароля администратора)</li>
+            <li>kill — принудительно завершает указанный процесс</li>
+            <li>ifconfig en0 — показывает IP- и MAC-адрес компьютера</li>
          </ul>
       </div>
       <!--footer-->
