--- a/html/cmd.html
+++ b/html/cmd.html
@@ -18,7 +18,7 @@
             <li>COPY – Копирование файлов в другое место</li>
             <li>DIR – Изменить каталог</li>
             <li>CD – Отображение файлов и папок в текущем каталоге</li>
-            <li>MAKEDIR – Создать папку</li>
+            <li>MKDIR – Создать папку</li>
             <li>MOVE – Переместить файлы из одной папки в другую</li>
          </ul>
          <h3 id="rt-1">Приложения и процессы</h3>
@@ -28,16 +28,18 @@
          </ul>
          <h3 id="rt-3">Системная информация</h3>
          <ul>
-            <li>DATE – Выводит или устанавливает системное время</li>
+            <li>DATA – Выводит или устанавливает системное время</li>
             <li>TIME – Выводит или устанавливает текущую дату</li>
             <li>HOSTNAME – Отображает имя компьютера</li>
             <li>SYSTEMINFO – Отображает информацию о конфигурации компьютера</li>
             <li>VER – Позволяет просмотреть версию Windows</li>
          </ul>
       </div>
-      <!--footer-->
-      <footer class="animated fadeIn">
-         &copy; 202 4. SkyPro
-      </footer>
+   <footer class="animated fadeIn">
+      <p class="location" align="center">
+         <a href="../index.html">Вернуться на главную</a>
+      </p>
+      &copy; 2024. SkyPro
+          </footer>
    </body>
 </html>
