--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
           <p class="location" align="center">
             <a href="html/git.html">Git</a>
          </p>
+      </p>
+      <p class="location" align="center">
+        <a href="html/CD.html">CI/CD</a>
+         </p>
          <p> <br>
          </p>
       </div>
